--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,5 @@ menu:
 
 
 ## Source
-favicon: /img/fav.png
-# favicon: /hexo-theme-nadymain/img/fav.png # subdomain
-css: /css/main.css
-# css: /hexo-theme-nadymain/css/main.css # subdomain
+favicon: img/fav.png
+css: css/main.css
